# COMP8051-GameEngine

./: .gitignore  CMakeLists.txt  README.md
SDL3_Image/lib/cmake/SDL3_image/: SDL3_image-shared-targets.cmake  SDL3_imageConfigVersion.cmake
SDL3_Image/lib/pkgconfig/: sdl3-image.pc
SDL3_Mixer/lib/cmake/SDL3_mixer/: SDL3_mixer-shared-targets.cmake  SDL3_mixerConfig.cmake
SDL3_Mixer/lib/pkgconfig/: sdl3-mixer.pc
SDL3_SDK_APPLE/lib/: libSDL3_mixer.dylib
SDL3_SDK_WIN32/include/SDL3/: SDL_revision.h
assets/: map.tmx
assets/animations/: bird_animations.xml  bull_animations.xml  bunny_animations.xml  explosion_animation.xml  fox_animations.xml  player_animations.xml  ringOfFire.xml  zombie_animations.xml
assets/items/: items.xml
assets/map-tlc/: TLC-MapUpdated.tmx
assets/map2/: map2.tmx  tileset.tsx
assets/prefabs/: coin.xml
assets/weapons/: weapon.xml
src/: Game.cpp  Game.h  GameObject.cpp  GameObject.h  Map.cpp  Map.h  TextureManager.cpp  TextureManager.h  icon.rc  main.cpp
src/behaviours/: WeaponBehaviours.cpp  WeaponBehaviours.h
src/ecs/: Component.h  ComponentType.h  Entity.h  EventManager.h  World.cpp  World.h
src/ecs/event/: AudioEventQueue.h  BaseEvent.h  EventManager.h
src/ecs/system/: AnimationClip.h  AnimationSystem.h  BobbingSystem.h  CameraSystem.h  CollisionSystem.cpp  CollisionSystem.h  DebugRenderSystem.cpp  DebugRenderSystem.h  DestructionSystem.h  EffectAnimationSystem.h  EffectSystem.h  EnemyMovementSystem.h  EventResponseSystem.cpp  EventResponseSystem.h  GameOverSystem.cpp  GameOverSystem.h  GameStateSystem.cpp  GameStateSystem.h  GridSystem.cpp  GridSystem.h  HUDSystem.cpp  HUDSystem.h  HealthSystem.cpp  HeathSystem.h  KeyboardInputSystem.cpp  KeyboardInputSystem.h  LevelUpHandler.cpp  LevelUpHandler.h  LevelUpSystem.cpp  LevelUpSystem.hpp  LifetimeSystem.h  MainMenuSystem.cpp  MainMenuSystem.h  MouseInputSystem.cpp  MouseInputSystem.h  MovementSystem.cpp  MovementSystem.h  OverlayRenderSystem.cpp  OverlayRenderSystem.h  PickUpSystem.cpp  (+13 more)
src/manager/: AssetManager.cpp  AssetManager.h  AudioManager.cpp  AudioManager.h  ItemManager.cpp  ItemManager.h  ItemManager.hpp  PrefabManager.cpp  PrefabManager.h  Scene.cpp  Scene.h  SceneManager.h  TextureManager.cpp  TextureManager.h  WeaponManager.cpp  WeaponManager.h
src/scene/: Scene.cpp  Scene.h  SceneType.h
src/utils/: Collision.cpp  Collision.h  RenderUtils.h  Timer.cpp  Timer.h  UIState.h  Vector2D.cpp  Vector2D.h
src/utils/data/: DebugState.h  GridPosition.h  Stat.h
